Fixed font contrast on flappy pong and szyslak headers

--- a/theme/assets/css/style.css
+++ b/theme/assets/css/style.css
@@ -413,3 +413,7 @@ h1, h2, h3, h4, h5, h6 {
 .gallery a:hover{
 	opacity: .7;
 }
+
+.dark{
+	color:#05386b;
+}
